--- a/foodMenu/index.html
+++ b/foodMenu/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/index.css">
-    <title>Title</title>
+    <title>food Menu</title>
 </head>
 
 <body>
