pmcaff web dome

--- a/Dr. Norman Borlaug/index.html
+++ b/Dr. Norman Borlaug/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Dr. Norman Borlaug</title>
-    <link href="//cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.css" rel="stylesheet">
+    <link href="http://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.css" rel="stylesheet">
 </head>
 <body>
 <div class="container">
@@ -59,7 +59,7 @@
         <p>Thank you for <a href="https://www.freecodecamp.com/quincylarson" target="_blank">Quincy Larson</a></p>
     </footer>
 </div>
-<script src="//cdn.bootcss.com/jquery/2.2.4/jquery.js"></script>
+<script src="http://cdn.bootcss.com/jquery/2.2.4/jquery.js"></script>
 <script src="./js/js.js"></script>
 </body>
 </html>
