--- a/foodMenu/index.html
+++ b/foodMenu/index.html
@@ -10,226 +10,238 @@
 </head>
 
 <body>
-<div class="public-header">
-    <div class="public-container clear-float">
-        <div class="header-logo"><a href=""></a></div>
-        <div class="header-nav clear-float">
+    <div class="public-header">
+        <div class="public-container clear-float">
+            <div class="header-logo">
+                <a href=""></a>
+            </div>
+            <div class="header-nav clear-float">
+                <ul>
+                    <li class="item"><a href="">Our Story</a></li>
+                    <li class="item"><a href="">Menu</a></li>
+                    <li class="item"><a href="">Reservations</a></li>
+                    <li class="item"><a href="">News</a></li>
+                    <li class="item"><a href="">Rviews</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="index-banner">
+        <div class="index-banner-bg"><img src="images/dome1.jpg" alt="banner"></div>
+        <div class="index-banner-text">
+            <div class="text-logo"></div>
+            <p class="text-info">
+                <i class="line line-left"></i>
+                <span class="text">resto restaurant home page website template</span>
+                <i class="line line-right"></i>
+            </p>
+        </div>
+    </div>
+    <div class="index-menu">
+        <div class="menu-tips">The menu</div>
+        <div class="public-container menu-list">
+            <ul class="clear-float">
+                <li class="menu-item clear-float">
+                    <div class="title">
+                        <a>
+                            <h4>Voluptate cillum fugiat.</h4>
+                            <p class="comment">Cheese, tomato, mushrooms, onions.</p>
+                        </a>
+                    </div>
+                    <div class="line"></div>
+                    <div class="price">$50</div>
+                </li>
+                <li class="menu-item clear-float">
+                    <div class="title">
+                        <a>
+                            <h4>Voluptate cillum fugiat.</h4>
+                            <p class="comment">Cheese, tomato, mushrooms, onions.</p>
+                        </a>
+                    </div>
+                    <div class="line"></div>
+                    <div class="price">$50</div>
+                </li>
+                <li class="menu-item clear-float">
+                    <div class="title">
+                        <a>
+                            <h4>Voluptate cillum fugiat.</h4>
+                            <p class="comment">Cheese, tomato, mushrooms, onions.</p>
+                        </a>
+                    </div>
+                    <div class="line"></div>
+                    <div class="price">$50</div>
+                </li>
+                <li class="menu-item clear-float">
+                    <div class="title">
+                        <a>
+                            <h4>Voluptate cillum fugiat.</h4>
+                            <p class="comment">Cheese, tomato, mushrooms, onions.</p>
+                        </a>
+                    </div>
+                    <div class="line"></div>
+                    <div class="price">$50</div>
+                </li>
+                <li class="menu-item clear-float">
+                    <div class="title">
+                        <a>
+                            <h4>Voluptate cillum fugiat.</h4>
+                            <p class="comment">Cheese, tomato, mushrooms, onions.</p>
+                        </a>
+                    </div>
+                    <div class="line"></div>
+                    <div class="price">$50</div>
+                </li>
+                <li class="menu-item clear-float">
+                    <div class="title">
+                        <a>
+                            <h4>Voluptate cillum fugiat.</h4>
+                            <p class="comment">Cheese, tomato, mushrooms, onions.</p>
+                        </a>
+                    </div>
+                    <div class="line"></div>
+                    <div class="price">$50</div>
+                </li>
+                <li class="menu-item clear-float">
+                    <div class="title">
+                        <a>
+                            <h4>Voluptate cillum fugiat.</h4>
+                            <p class="comment">Cheese, tomato, mushrooms, onions.</p>
+                        </a>
+                    </div>
+                    <div class="line"></div>
+                    <div class="price">$50</div>
+                </li>
+                <li class="menu-item clear-float">
+                    <div class="title">
+                        <a>
+                            <h4>Voluptate cillum fugiat.</h4>
+                            <p class="comment">Cheese, tomato, mushrooms, onions.</p>
+                        </a>
+                    </div>
+                    <div class="line"></div>
+                    <div class="price">$50</div>
+                </li>
+            </ul>
+        </div>
+        <div><a class="menu-more-btn" href=""><span class="menu-btn-text">load more</span> | <i class="icon"></i></a></div>
+    </div>
+    <div class="public-container index-list"></div>
+    <div class="public-container index-panel">
+        <div class="index-panel-header clear-float">
+            <h3>Featured Dishes</h3>
+            <div class="line"></div>
+            <div class="btn-group">
+                <a href="" class="btn active"></a>
+                <a href="" class="btn"></a>
+                <a href="" class="btn"></a>
+                <a href="" class="btn"></a>
+            </div>
+        </div>
+        <div class="index-panel-body index-food-list clear-float">
             <ul>
-                <li class="item"><a href="">Our Story</a></li>
-                <li class="item"><a href="">Menu</a></li>
-                <li class="item"><a href="">Reservations</a></li>
-                <li class="item"><a href="">News</a></li>
-                <li class="item"><a href="">Rviews</a></li>
+                <li class="food-item">
+                    <a href="">
+                        <div class="banner"><img src="./images/dome2.jpg"></div>
+                        <div class="name">Fugiat nulla sint<span class="price">$30</span></div>
+                        <div class="star-bar">
+                            <span class="star"></span>
+                            <span class="star"></span>
+                            <span class="star"></span>
+                            <span class="star"></span>
+                            <span class="star nostar"></span>
+                        </div>
+                    </a>
+                </li>
+                <li class="food-item">
+                    <a href="">
+                        <div class="banner"><img src="./images/dome3.jpg"></div>
+                        <div class="name">Fugiat nulla sint<span class="price">$30</span></div>
+                        <div class="star-bar">
+                            <span class="star"></span>
+                            <span class="star"></span>
+                            <span class="star"></span>
+                            <span class="star"></span>
+                            <span class="star nostar"></span>
+                        </div>
+                    </a>
+                </li>
+                <li class="food-item">
+                    <a href="">
+                        <div class="banner"><img src="./images/dome4.jpg"></div>
+                        <div class="name">Fugiat nulla sint<span class="price">$30</span></div>
+                        <div class="star-bar">
+                            <span class="star"></span>
+                            <span class="star"></span>
+                            <span class="star"></span>
+                            <span class="star"></span>
+                            <span class="star nostar"></span>
+                        </div>
+                    </a>
+                </li>
+                <li class="food-item">
+                    <a href="">
+                        <div class="banner"><img src="./images/dome5.jpg"></div>
+                        <div class="name">Fugiat nulla sint<span class="price">$30</span></div>
+                        <div class="star-bar">
+                            <span class="star"></span>
+                            <span class="star"></span>
+                            <span class="star"></span>
+                            <span class="star"></span>
+                            <span class="star nostar"></span>
+                        </div>
+                    </a>
+                </li>
             </ul>
         </div>
     </div>
-</div>
-<div class="index-banner">
-    <div class="index-banner-bg"><img src="images/dome1.jpg" alt="banner"></div>
-    <div class="index-banner-text">
-        <div class="text-logo"></div>
-        <p class="text-info">
-            <i class="line line-left"></i>
-            <span class="text">resto restaurant home page website template</span>
-            <i class="line line-right"></i>
-        </p>
-    </div>
-</div>
-<div class="index-menu">
-    <div class="menu-tips">The menu</div>
-    <div class="public-container menu-list">
-        <ul class="clear-float">
-            <li class="menu-item clear-float">
-                <div class="title">
-                    <a>
-                        <h4>Voluptate cillum fugiat.</h4>
-                        <p class="comment">Cheese, tomato, mushrooms, onions.</p>
-                    </a>
-                </div>
-                <div class="line"></div>
-                <div class="price">$50</div>
-            </li>
-            <li class="menu-item clear-float">
-                <div class="title">
-                    <a>
-                        <h4>Voluptate cillum fugiat.</h4>
-                        <p class="comment">Cheese, tomato, mushrooms, onions.</p>
-                    </a>
-                </div>
-                <div class="line"></div>
-                <div class="price">$50</div>
-            </li>
-            <li class="menu-item clear-float">
-                <div class="title">
-                    <a>
-                        <h4>Voluptate cillum fugiat.</h4>
-                        <p class="comment">Cheese, tomato, mushrooms, onions.</p>
-                    </a>
-                </div>
-                <div class="line"></div>
-                <div class="price">$50</div>
-            </li>
-            <li class="menu-item clear-float">
-                <div class="title">
-                    <a>
-                        <h4>Voluptate cillum fugiat.</h4>
-                        <p class="comment">Cheese, tomato, mushrooms, onions.</p>
-                    </a>
-                </div>
-                <div class="line"></div>
-                <div class="price">$50</div>
-            </li>
-            <li class="menu-item clear-float">
-                <div class="title">
-                    <a>
-                        <h4>Voluptate cillum fugiat.</h4>
-                        <p class="comment">Cheese, tomato, mushrooms, onions.</p>
-                    </a>
-                </div>
-                <div class="line"></div>
-                <div class="price">$50</div>
-            </li>
-            <li class="menu-item clear-float">
-                <div class="title">
-                    <a>
-                        <h4>Voluptate cillum fugiat.</h4>
-                        <p class="comment">Cheese, tomato, mushrooms, onions.</p>
-                    </a>
-                </div>
-                <div class="line"></div>
-                <div class="price">$50</div>
-            </li>
-            <li class="menu-item clear-float">
-                <div class="title">
-                    <a>
-                        <h4>Voluptate cillum fugiat.</h4>
-                        <p class="comment">Cheese, tomato, mushrooms, onions.</p>
-                    </a>
-                </div>
-                <div class="line"></div>
-                <div class="price">$50</div>
-            </li>
-            <li class="menu-item clear-float">
-                <div class="title">
-                    <a>
-                        <h4>Voluptate cillum fugiat.</h4>
-                        <p class="comment">Cheese, tomato, mushrooms, onions.</p>
-                    </a>
-                </div>
-                <div class="line"></div>
-                <div class="price">$50</div>
-            </li>
-        </ul>
-    </div>
-    <div><a class="menu-more-btn" href=""><span class="menu-btn-text">load more</span> | <i class="icon"></i></a></div>
-</div>
-<div class="public-container index-list"></div>
-<div class="public-container index-panel">
-    <div class="index-panel-header clear-float">
-        <h3>Featured Dishes</h3>
-        <div class="line"></div>
-        <div class="btn-group">
-            <a href="" class="btn active"></a>
-            <a href="" class="btn"></a>
-            <a href="" class="btn"></a>
-            <a href="" class="btn"></a>
+    <div class="public-container index-panel">
+        <div class="index-panel-header clear-float">
+            <h3>Featured Dishes</h3>
+            <div class="line"></div>
+        </div>
+        <div class="index-panel-body index-food-pics clear-float">
+            <ul class="">
+                <li class="pic-col pic-col-m">
+                    <img src="./images/dome6.jpg" alt="">
+                </li>
+                <li class="pic-col pic-col-s">
+                    <img class="pic-row" src="./images/dome7.jpg" alt="">
+                    <img class="pic-row" src="./images/dome8.jpg" alt="">
+                </li>
+                <li class="pic-col pic-col-l">
+                    <img src="./images/dome9.jpg" alt="">
+                </li>
+            </ul>
         </div>
     </div>
-    <div class="index-panel-body index-food-list clear-float">
-        <ul>
-            <li class="food-item">
-                <a href="">
-                    <div class="banner"><img src="./images/dome2.jpg"></div>
-                    <div class="name">Fugiat nulla sint<span class="price">$30</span></div>
-                    <div class="star-bar">
-                        <span class="star"></span>
-                        <span class="star"></span>
-                        <span class="star"></span>
-                        <span class="star"></span>
-                        <span class="star nostar"></span>
-                    </div>
-                </a>
-            </li>
-            <li class="food-item">
-                <a href="">
-                    <div class="banner"><img src="./images/dome3.jpg"></div>
-                    <div class="name">Fugiat nulla sint<span class="price">$30</span></div>
-                    <div class="star-bar">
-                        <span class="star"></span>
-                        <span class="star"></span>
-                        <span class="star"></span>
-                        <span class="star"></span>
-                        <span class="star nostar"></span>
-                    </div>
-                </a>
-            </li>
-            <li class="food-item">
-                <a href="">
-                    <div class="banner"><img src="./images/dome4.jpg"></div>
-                    <div class="name">Fugiat nulla sint<span class="price">$30</span></div>
-                    <div class="star-bar">
-                        <span class="star"></span>
-                        <span class="star"></span>
-                        <span class="star"></span>
-                        <span class="star"></span>
-                        <span class="star nostar"></span>
-                    </div>
-                </a>
-            </li>
-            <li class="food-item">
-                <a href="">
-                    <div class="banner"><img src="./images/dome5.jpg"></div>
-                    <div class="name">Fugiat nulla sint<span class="price">$30</span></div>
-                    <div class="star-bar">
-                        <span class="star"></span>
-                        <span class="star"></span>
-                        <span class="star"></span>
-                        <span class="star"></span>
-                        <span class="star nostar"></span>
-                    </div>
-                </a>
-            </li>
-        </ul>
-    </div>
-</div>
-<div class="public-container index-panel">
-    <div class="index-panel-header clear-float">
-        <h3>Featured Dishes</h3>
-        <div class="line"></div>
-    </div>
-    <div class="index-panel-body index-food-pics clear-float">
-        <ul class="">
-            <li class="pic-col pic-col-m">
-                <img src="./images/dome6.jpg" alt="">
-            </li>
-            <li class="pic-col pic-col-s">
-                <img class="pic-row" src="./images/dome7.jpg" alt="">
-                <img class="pic-row" src="./images/dome8.jpg" alt="">
-            </li>
-            <li class="pic-col pic-col-l">
-                <img src="./images/dome9.jpg" alt="">
-            </li>
-        </ul>
-    </div>
-</div>
-<div class="public-footer">
-    <div class="public-container ">
-        <div class="footer-col">
-            <p>New York Restaurant<br>3926 Anmoore Road<br>New York, NY 10014<br><a
-                    href="tel:718-749-1714">718-749-1714</a></p>
-        </div>
-        <div class="footer-col"><p>France<br>68,rue de la Couronne<br>75002 PARIS<br>02.94.23.69.56</p></div>
-        <div class="footer-col">
-            <a>Blog</a>
-            <a>Careers</a>
-            <a>Privacy Policy</a>
-            <a>Contact</a></div>
-        <div class="footer-col">
-            <div class="footer-logo"><a href=""></a></div>
-            <div class="footer-info">&copy; All Rights Reserved 2016 <br> Find More at Pixelhint.com</div>
+    <div class="public-footer">
+        <div class="public-container ">
+            <div class="footer-col">
+                <p>New York Restaurant
+                    <br>3926 Anmoore Road
+                    <br>New York, NY 10014
+                    <br><a href="tel:718-749-1714">718-749-1714</a></p>
+            </div>
+            <div class="footer-col">
+                <p>France
+                    <br>68ßß,rue de la Couronne
+                    <br>75002 PARIS
+                    <br>02.94.23.69.56</p>
+            </div>
+            <div class="footer-col">
+                <a>Blog</a>
+                <a>Careers</a>
+                <a>Privacy Policy</a>
+                <a>Contact</a></div>
+            <div class="footer-col">
+                <div class="footer-logo">
+                    <a href=""></a>
+                </div>
+                <div class="footer-info">&copy; All Rights Reserved 2016
+                    <br> Find More at Pixelhint.com</div>
+            </div>
         </div>
     </div>
-</div>
 
 </body>
 
