--- a/wall/index.html
+++ b/wall/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>well</title>
-    <link href="//cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.css" rel="stylesheet">
+    <link href="http://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.css" rel="stylesheet">
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
@@ -26,7 +26,7 @@
     </div>
     <div class="col-sm-offset-4 col-sm-4" ><a class="btn btn-primary btn-lg" id="launch" href="javascrip:;" role="button">发射</a> <a class="btn btn-danger btn-lg" id="clear" href="javascrip:;" role="button">清屏</a></div>
 </div>
-<script src="//cdn.bootcss.com/jquery/2.2.4/jquery.js"></script>
+<script src="http://cdn.bootcss.com/jquery/2.2.4/jquery.js"></script>
 <script src="https://cdn.wilddog.com/js/client/current/wilddog.js"></script>
 <script src="./js/js.js"></script>
 </body>
